--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,8 @@
 
   "plugins": [],
 
+  ignorePatterns: ['lib', 'webpack.config.js'],
+
   "rules": {
     "block-scoped-var": 2,
     "brace-style": [2, "1tbs", { "allowSingleLine": true }],
